# fotd-server

./: .csharpierignore.md  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Directory.Build.props  FOMServer.sln  LICENSE  ManagedOnly.slnf  README.md  justfile  stylecop.json
fom-interface/: CMakeLists.txt
fom-interface/include/fom-interface/: FOMInterface.h  FOMInterface_export.h
fom-interface/src/: PacketServer.h
fom-network/: CMakeLists.txt  FOMNetwork.vcxproj
fom-network/include/fom-network/: ClientAPI.h  FOMDataSerializer.h  FOMNetworkEnums.h  FOMNetworkTypes.h  FOMPacket.h  FOMPacketSerializer.h  InteropTypes.h  NetworkAPI.h  NetworkAddress.h  PacketAPI.h  PacketApi.h  PacketIdentifier.h  PacketIdentifiers.h  PacketSerializers.h  ServerAPI.h  ServerApi.h
fom-network/include/fom-network/constants/: BufferSizes.h  FactionConstants.h  PlayerConstants.h
fom-network/include/fom-network/enums/: AttributeType.h  EquipmentSlot.h  Faction.h  FactionRelation.h  ItemContainerType.h  ItemLocation.h  ItemQuality.h  ItemSecurity.h  ItemSlot.h  ItemType.h  MedicalTreatment.h  PacketIdentifier.h  Player.h  PlayerAttachment.h  PlayerAttribute.h  PlayerSkill.h  SkillType.h  UiItemSlot.h  WeaponSlot.h  WorldID.h  WorldId.h  WorldObjectType.h  WorldServiceType.h  WorldUpdateType.h
fom-network/include/fom-network/models/: Apartment.h  Avatar.h  OverviewWorld.h  WorldOverview.h
fom-network/include/fom-network/packets/: ChatPacket.h  CheckName.h  CheckNamePacket.h  CheckNameReturn.h  CheckNameReturnPacket.h  CreateCharacter.h  CreateCharacterPacket.h  FOMPacket.h  FOMPacketError.h  Login.h  LoginPacket.h  LoginRequest.h  LoginRequestPacket.h  LoginRequestReturn.h  LoginRequestReturnPacket.h  LoginReturn.h  LoginReturnPacket.h  LoginTokenCheck.h  LoginTokenCheckPacket.h  MoveItems.h  MoveItemsPacket.h  PacketIdentifier.h  PacketSerializers.h  PacketTypes.h  PlayerLeavingWorld.h  PlayerLeavingWorldPacket.h  PlayerMigrateWorld.h  PlayerMigrateWorldPacket.h  PlayerWorldReady.h  PlayerWorldReadyPacket.h  ReadPacketError.h  RegisterClient.h  RegisterClientPacket.h  RegisterClientReturn.h  RegisterClientReturnPacket.h  RegisterWorld.h  RegisterWorldPacket.h  UpdatePacket.h  WorldLogin.h  WorldLoginPacket.h  (+8 more)
fom-network/include/fom-network/structs/: ApartmentInterop.h  AvatarInterop.h  PositionInterop.h  PositionRotationInterop.h  WorldUpdateInterop.h
fom-network/include/fom-network/types/: Apartment.h  Avatar.h  FactionEmblem.h  FactionEmblemLayer.h  FactionPerk.h  FactionPerks.h  Inventory.h  Item.h  ItemBase.h  ItemList.h  ItemStack.h  PlayerAttributes.h  PlayerProfile.h  PlayerSkill.h  PlayerSkills.h  Position.h  WorldUpdate.h
fom-network/src/: ClientAPI.cpp  FOMDataSerializer.cpp  FOMDataSerializer.h  FOMPacketSerializer.cpp  NetworkAPI.cpp  NetworkAddressSerializer.h  NetworkApi.cpp  PacketAPI.cpp  PacketApi.cpp  ServerAPI.cpp  ServerApi.cpp
fom-network/src/model-serializers/: ApartmentSerializer.h  AvatarSerializer.h  ModelSerializer.h  NetworkAddressSerializer.h  OverviewWorldSerializer.h  WorldOverviewSerializer.h
fom-network/src/packet-serializers/: CheckNameReturnSerializer.cpp  CheckNameSerializer.cpp  CreateCharacterSerializer.cpp  ExamplePacketSerializer.cpp  LoginReturnSerializer.cpp  NetworkAddressSerializer.h  RegisterWorldSerializer.cpp
fom-network/src/packet-serializers/data/: CheckNameReturnSerializer.cpp  CheckNameSerializer.cpp  CreateCharacterSerializer.cpp  LoginRequestSerializer.cpp  LoginReturnSerializer.cpp  LoginSerializer.cpp  PlayerEnteringWorldReturnSerializer.cpp  PlayerEnteringWorldSerializer.cpp  (+7 more)
fom-network/src/packets/: ChatPacketSerializer.cpp  CheckNamePacketSerializer.cpp  CheckNameReturnPacketSerializer.cpp  CheckNameReturnSerializer.cpp  CheckNameSerializer.cpp  CreateCharacterPacketSerializer.cpp  CreateCharacterSerializer.cpp  LoginPacketSerializer.cpp  LoginRequestPacketSerializer.cpp  LoginRequestReturnPacketSerializer.cpp  LoginRequestSerializer.cpp  LoginReturnPacketSerializer.cpp  LoginReturnSerializer.cpp  LoginSerializer.cpp  LoginTokenCheckPacketSerializer.cpp  LoginTokenCheckSerializer.cpp  MoveItemsPacketSerializer.cpp  MoveItemsSerializer.cpp  PacketSerializers.h  PlayerLeavingWorldPacketSerializer.cpp  PlayerLeavingWorldSerializer.cpp  PlayerMigrateWorldPacketSerializer.cpp  PlayerMigrateWorldSerializer.cpp  PlayerWorldReadyPacketSerializer.cpp  PlayerWorldReadySerializer.cpp  RegisterClientPacketSerializer.cpp  RegisterClientReturnPacketSerializer.cpp  RegisterClientReturnSerializer.cpp  RegisterClientSerializer.cpp  RegisterWorldPacketSerializer.cpp  RegisterWorldSerializer.cpp  UpdatePacketSerializer.cpp  WorldLoginPacketSerializer.cpp  WorldLoginReturnPacketSerializer.cpp  WorldLoginReturnSerializer.cpp  WorldLoginSerializer.cpp  WorldObjectsPacketSerializer.cpp  WorldObjectsSerializer.cpp  WorldServicePacketSerializer.cpp  WorldServiceSerializer.cpp  (+1 more)
fom-network/src/serializers/: CheckNameReturnSerializer.cpp  LoginRequestPacketSerializer.cpp  LoginRequestReturnPacketSerializer.cpp  LoginRequestReturnSerializer.cpp  LoginRequestSerializer.cpp  LoginReturnSerializer.cpp
fom-network/src/structs/: ApartmentInteropSerializer.h  AvatarInteropSerializer.h  InteropTypeSerializer.h  PositionInteropSerializer.h  PositionRotationInteropSerializer.h  WorldUpdateInteropSerializer.cpp  WorldUpdateInteropSerializer.h
fom-network/src/types/: ApartmentSerializer.h  AvatarSerializer.h  FactionEmblemLayerSerializer.h  FactionEmblemSerializer.h  FactionPerksSerializer.h  InventorySerializer.h  ItemBaseSerializer.h  ItemListSerializer.cpp  ItemListSerializer.h  ItemSerializer.h  ItemStackSerializer.h  NetworkAddressSerializer.h  PlayerAttributesSerializer.h  PlayerProfileSerializer.h  PlayerSkillsSerializer.h  PositionRotationSerializer.h  PositionSerializer.h  WorldUpdateSerializer.cpp  WorldUpdateSerializer.h
fom-network/tests/: CMakeLists.txt  FOMDataSerializer_test.cpp  FOMPacketSerializer_test.cpp
fom-network/tests/packet-serializers/: ExamplePacketSerializer_test.cpp
server/: CMakeLists.txt  Program.cs
(+810 files in other folders)
